--- a/style.css
+++ b/style.css
@@ -20,9 +20,75 @@
     background-image: url(./src/images/Background.jpg);
     background-size:contain;
   }
-  
+
   .wrapper {
     padding: 35px 40px;
     border-radius: 20px;
     background: #141414;
+  }
+
+  header .column {
+    display: flex;
+    align-items: center;
+  }
+
+  @media screen and (max-width: 815px) {
+    .wrapper {
+      padding: 25px;
+    }
+    header {
+      flex-direction: column;
+    }
+    header :where(h2, .column) {
+      margin-bottom: 13px;
+    }
+    .volume-slider input {
+      max-width: 100px;
+    }
+    .piano-keys {
+      margin-top: 20px;
+    }
+    .piano-keys .key:where(:nth-child(9), :nth-child(10)) {
+      display: none;
+    }
+    .piano-keys .black {
+      height: 100px;
+      width: 40px;
+      margin: 0 -20px 0 -20px;
+    }
+    .piano-keys .white {
+      height: 180px;
+      width: 60px;
+    }
+  }
+
+  .volume-slider input {
+    accent-color: #fff;
+  }
+
+  .keys-checkbox input {
+    height: 30px;
+    width: 60px;
+    cursor: pointer;
+    appearance: none;
+    position: relative;
+    background: #4B4B4B
+  }
+
+  .keys-checkbox input::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #8c8c8c;
+    transform: translateY(-50%);
+    transition: all 0.3s ease;
+  }
+
+  .keys-checkbox input:checked::before {
+    left: 35px;
+    background: #fff;
   }
