--- a/style.css
+++ b/style.css
@@ -30,6 +30,33 @@
     background-size:contain;
   }
 
+  .wrapper header {
+    display: flex;
+    color: #B2B2B2;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  header h2 {
+    font-size: 1.6rem;
+  }
+  
+  header .column {
+    display: flex;
+    align-items: center;
+  }
+  
+  header span {
+    font-weight: 500;
+    margin-right: 15px;
+    font-size: 1.19rem;
+  }
+  
+  header input {
+    outline: none;
+    border-radius: 30px;
+  }
+
   .wrapper {
     padding: 35px 40px;
     border-radius: 20px;
@@ -39,6 +66,10 @@
   header .column {
     display: flex;
     align-items: center;
+  }
+
+  .volume-slider input {
+    accent-color: #fff;
   }
 
   @media screen and (max-width: 815px) {
@@ -221,6 +252,17 @@
     word-break: break-all;
     margin-top: 5px;
     text-align: center;
+  }
+
+  .delete-btn {
+    margin-top: 10px;
+    font-weight: bold;
+    padding: 5px;
+    background: linear-gradient(45deg, #9b59b6, #ff6f61);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
   }
 
   #chatbot-container {
